--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "name": "robin-portfolio",
+  "description": "Portfolio for Robin Baskaran",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -10,24 +9,18 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "clean": "gatsby clean"
   },
   "dependencies": {
     "gatsby": "^3.6.2",
-    "gatsby-plugin-react-head": "^1.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-head": "^3.4.0"
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
     "prettier": "2.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
-  },
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/company-to-accompany/robin-portfolio.git"
   }
 }
