--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/react-helmet": "^6.1.1",
     "gatsby": "^3.6.2",
+    "gatsby-plugin-manifest": "^3.7.1",
     "gatsby-plugin-react-helmet": "^4.7.1",
     "gh-pages": "^3.2.2",
     "react": "^17.0.1",
